// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claimScopes should return a list of scopes for given identity 1`] = `
Object {
  "claimScopes": Object {
    "__typename": "ClaimScopesConnection",
    "nodes": Array [],
  },
}
`;

exports[`claims should return all claims as there are no filters 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "Claim",
        "cddId": "0x4a001457f9ce712c2451f1ea4ad08d329a46b622319d7cdf6917b35dda024e05",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633944468000",
        "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633944468000",
        "scope": null,
        "targetId": "0x406c0c0af84c690b0fd730c53f9518af7b6a11f0aa5b1e3bdf48b5bf7f695fb4",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x5a04572d05e2661758d266bf90a5e59303eef6ed7d8f1db854a05cf92d40be65",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1633795314000",
        "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1633795314000",
        "scope": null,
        "targetId": "0x4dfc4fc610db8b59e29bb3df5b0a0b097fd5df5934dcdba475c470e302f205ea",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x58c1fa500a6a0c0e15afc2b35a47f8880da8e5fb30eda830dea472d8347d1b2c",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1634245368000",
        "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1634245368000",
        "scope": null,
        "targetId": "0x13b9b8cc6bb21ffdd897765744cb5ff75dd9ed7adadd024813531ad1af2a226e",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x4c8107f0232b097913aa53788ae50af060e469cdfc97267804fb40cc61d01c45",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1634311434000",
        "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1634311434000",
        "scope": null,
        "targetId": "0x1e4361c382f6556095a855a43e20289b7252a1c66c7c8b837ae32d3d1cb16642",
        "type": "CustomerDueDiligence",
      },
    ],
    "totalCount": 4,
  },
}
`;

exports[`claims should return filtered claims 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`claims should return just total count 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "totalCount": 4,
  },
}
`;

exports[`identityWithClaims should return all identities with their claims as there are no filters 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x58c1fa500a6a0c0e15afc2b35a47f8880da8e5fb30eda830dea472d8347d1b2c",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1634245368000",
              "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1634245368000",
              "scope": null,
              "targetId": "0x13b9b8cc6bb21ffdd897765744cb5ff75dd9ed7adadd024813531ad1af2a226e",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x13b9b8cc6bb21ffdd897765744cb5ff75dd9ed7adadd024813531ad1af2a226e",
        "issuerIndex": Array [
          "0x0100000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x4c8107f0232b097913aa53788ae50af060e469cdfc97267804fb40cc61d01c45",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1634311434000",
              "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1634311434000",
              "scope": null,
              "targetId": "0x1e4361c382f6556095a855a43e20289b7252a1c66c7c8b837ae32d3d1cb16642",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x1e4361c382f6556095a855a43e20289b7252a1c66c7c8b837ae32d3d1cb16642",
        "issuerIndex": Array [
          "0x0100000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x4a001457f9ce712c2451f1ea4ad08d329a46b622319d7cdf6917b35dda024e05",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633944468000",
              "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633944468000",
              "scope": null,
              "targetId": "0x406c0c0af84c690b0fd730c53f9518af7b6a11f0aa5b1e3bdf48b5bf7f695fb4",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x406c0c0af84c690b0fd730c53f9518af7b6a11f0aa5b1e3bdf48b5bf7f695fb4",
        "issuerIndex": Array [
          "0x0100000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
      Object {
        "__typename": "IdentityWithClaim",
        "claims": Object {
          "__typename": "ClaimsConnection",
          "nodes": Array [
            Object {
              "__typename": "Claim",
              "cddId": "0x5a04572d05e2661758d266bf90a5e59303eef6ed7d8f1db854a05cf92d40be65",
              "expiry": null,
              "filterExpiry": "253402194600000",
              "issuanceDate": "1633795314000",
              "issuerId": "0x0100000000000000000000000000000000000000000000000000000000000000",
              "jurisdiction": null,
              "lastUpdateDate": "1633795314000",
              "scope": null,
              "targetId": "0x4dfc4fc610db8b59e29bb3df5b0a0b097fd5df5934dcdba475c470e302f205ea",
              "type": "CustomerDueDiligence",
            },
          ],
        },
        "id": "0x4dfc4fc610db8b59e29bb3df5b0a0b097fd5df5934dcdba475c470e302f205ea",
        "issuerIndex": Array [
          "0x0100000000000000000000000000000000000000000000000000000000000000",
        ],
        "maxExpiry": "253402194600000",
        "scopeIndex": Array [
          null,
        ],
        "typeIndex": Array [
          "CustomerDueDiligence",
        ],
      },
    ],
    "totalCount": 4,
  },
}
`;

exports[`identityWithClaims should return identities and claims filtered 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`identityWithClaims should return just total count 1`] = `
Object {
  "identityWithClaims": Object {
    "__typename": "IdentityWithClaimsConnection",
    "totalCount": 4,
  },
}
`;

exports[`issuerIdentityWithClaims should return all issuers with their claims for given did 1`] = `
Object {
  "issuerIdentityWithClaims": Object {
    "__typename": "IssuerIdentityWithClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`issuerIdentityWithClaims should return identities and claims filtered 1`] = `
Object {
  "issuerIdentityWithClaims": Object {
    "__typename": "IssuerIdentityWithClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;
